tests/miniJava/neg/006943_mutation.MiniJava
this java { public static void Main ( String [ ] java ) { { } } }
